--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -7,17 +7,20 @@ html
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
 
     body 
+        if(role.permissions.length > 0)
 
-        include ../paritials/header.pug
-        main 
-            block main
+            include ../paritials/header.pug
+            main 
+                block main
 
-        include ../paritials/footer.pug
-    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js") 
-    script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js") 
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js") 
-    script(src = "/admin/js/script.js")
-    //- TinyMCE
-    script(src = "/tinymce/tinymce.min.js")
-    script(src = "/admin/js/my-tinymce-config.js")
+            include ../paritials/footer.pug
+            script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js") 
+            script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js") 
+            script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js") 
+            script(src = "/admin/js/script.js")
+            //- TinyMCE
+            script(src = "/tinymce/tinymce.min.js")
+            script(src = "/admin/js/my-tinymce-config.js")
+        else 
+            h1 Ban khong co quyen truy cap
 
