--- a/views/admin/pages/roles/create.pug
+++ b/views/admin/pages/roles/create.pug
@@ -3,32 +3,34 @@ extends ../../layouts/default.pug
 
 
 block main 
-    h1(class = "mb-4") Thêm mới nhóm quyền
+    if(role.permissions.includes("roles_create"))
 
-    form(
-        action= `/admin/roles/create`
-        method = "POST"
-    ) 
+        h1(class = "mb-4") Thêm mới nhóm quyền
 
-        div(class = "form-group")
-            label(for="name") Tên 
-            input(
-                type="text"
-                class = "form-control"
-                id = "name"
-                name = "name"
-                
-            ) 
-        div(class = "form-group")
-            label(for="desc") Mô tả 
-            input(
-                type="text"
-                class = "form-control"
-                id = "desc"
-                name = "description"
-            ) 
-        div(class = "form-group")
-            button(
-                type = "submit"
-                class = "btn btn-primary"
-            ) Tạo mới
+        form(
+            action= `/admin/roles/create`
+            method = "POST"
+        ) 
+
+            div(class = "form-group")
+                label(for="name") Tên 
+                input(
+                    type="text"
+                    class = "form-control"
+                    id = "name"
+                    name = "name"
+                    
+                ) 
+            div(class = "form-group")
+                label(for="desc") Mô tả 
+                input(
+                    type="text"
+                    class = "form-control"
+                    id = "desc"
+                    name = "description"
+                ) 
+            div(class = "form-group")
+                button(
+                    type = "submit"
+                    class = "btn btn-primary"
+                ) Tạo mới
