--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -4,56 +4,57 @@ include ../../mixins/alert.pug
 
 
 block main
-    +success("5000")
-    h1(class = "mb-4") Nhom quyen
+    if(role.permissions.includes("roles_views"))
+        +success("5000")
+        h1(class = "mb-4") Nhom quyen
 
-    .card.mb-3 
-        .card-header Danh sach
-        .card-body 
-            .row 
-                .col-8 
-                .col-4 
-                    a(
-                        href= `/admin/roles/create`
-                        class = "btn btn-outline-success"
+        .card.mb-3 
+            .card-header Danh sach
+            .card-body 
+                .row 
+                    .col-8 
+                    .col-4 
+                        a(
+                            href= `/admin/roles/create`
+                            class = "btn btn-outline-success"
 
-                    ) + Thêm mới
+                        ) + Thêm mới
 
-            table(
-                class = "table table-hover table-sm"
-                
-                )
-                thead 
-                    tr 
-                        
-                        th STT 
-                        th Nhóm quyền 
-                        th Mô tả 
-                        th Hành động
-                tbody 
-                    if(records.length > 0)
-                        each item,index in records
-                            tr 
-                                td #{index + 1}
-                                td #{item.name}
-                                td #{item.description}
-                                td 
-                                    a(
-                                        href = `/admin/roles/detail/${item.id}`
-                                        class = "btn btn-secondary btn-sm"
-                                    
-                                    ) Chi tiết
-                                    a(
-                                        href = `/admin/roles/edit/${item.id}`
-                                        class = "btn btn-warning btn-sm"
-                                    
-                                    ) Sửa 
-                                    button(
-                                        class = "btn btn-danger btn-sm ml-1"
-                                    ) Xóa 
-                    else
+                table(
+                    class = "table table-hover table-sm"
+                    
+                    )
+                    thead 
                         tr 
-                            td(col-span = "4" class = "text-center") Chưa có nhóm quyền nào được tạo
+                            
+                            th STT 
+                            th Nhóm quyền 
+                            th Mô tả 
+                            th Hành động
+                    tbody 
+                        if(records.length > 0)
+                            each item,index in records
+                                tr 
+                                    td #{index + 1}
+                                    td #{item.name}
+                                    td #{item.description}
+                                    td 
+                                        a(
+                                            href = `/admin/roles/detail/${item.id}`
+                                            class = "btn btn-secondary btn-sm"
+                                        
+                                        ) Chi tiết
+                                        a(
+                                            href = `/admin/roles/edit/${item.id}`
+                                            class = "btn btn-warning btn-sm"
+                                        
+                                        ) Sửa 
+                                        button(
+                                            class = "btn btn-danger btn-sm ml-1"
+                                        ) Xóa 
+                        else
+                            tr 
+                                td(col-span = "4" class = "text-center") Chưa có nhóm quyền nào được tạo
             
             
 
