--- a/views/admin/pages/product/deleted.pug
+++ b/views/admin/pages/product/deleted.pug
@@ -1,6 +1,8 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/sort.pug
+include ../../mixins/moment.pug
+
 
 block main 
     +success("5000")
@@ -75,6 +77,7 @@ block main
                   th STT 
                   th Hình ảnh
                   th Tên Phim 
+                  th Người xóa
                   th Thời lượng phim 
                   th Tập mới nhất
                   th Trạng thái
@@ -95,6 +98,10 @@ block main
                       td 
                           img(src= item.image, alt="")
                       td  #{item.name}
+                      td  
+                        p #{item.accountFullname}
+                        p 
+                          +formatDateTime(item.deletedBy.deletedAt)
                       td  #{item.Showtimes}
                       td  #{item.newEp}
                       td  
