--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -9,8 +9,9 @@ html
     body 
         if(role.permissions.length > 0)
 
-            include ../paritials/header.pug
-            main 
+            include ../paritials/headerr.pug
+            section.home-section
+                
                 block main
 
             include ../paritials/footer.pug
